--- a/404.html
+++ b/404.html
@@ -25,6 +25,7 @@
 
   <head>
     <meta charset="utf-8" />
+    <title>ip-calculator</title>
     <!--
         from current url, redirects to query string+hash
         url : http://www.foo.tld/one/two?a=b& c=d#qwe
